--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -39,5 +39,6 @@ Database: # 数据库配置
   TablePrefix: blog_
   Charset: utf8
   ParseTime: True
-  MaxIdleConns: 10
-  MaxOpenConns: 30
+  MaxIdleConns: 10  # 最大空闲连接数
+  MaxOpenConns: 30  # 最大连接数
+  ConnMaxLifetime: 5  # 每个链接的过期时间
