--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,10 +10,10 @@ App: # 应用配置
   LogSavePath: storage/logs  # 默认的应用日志存储路径
   LogFileName: app
   LogFileExt: .log
-  UploadSavePath: storage/uploads
-  UploadServerUrl: http://127.0.0.1:8000/static
-  UploadImageMaxSize: 5  # MB
-  UploadImageAllowExts:
+  UploadSavePath: storage/uploads  # 上传文件的最终保存目录
+  UploadServerUrl: http://127.0.0.1:8000/static  # 上传文件后的用于展示的文件服务地址
+  UploadImageMaxSize: 5  # 上传文件所允许的最大空间大小（MB）
+  UploadImageAllowExts:  # 上传文件所允许的文件后缀
     - .jpg
     - .jpeg
     - .png
